--- a/mystyle.css
+++ b/mystyle.css
@@ -1,111 +1,108 @@
+.box1 
+{background-color:skyblue;
+text-align: center;
+height: 359px;
+width: 500px;
+float: left;
+font-size: 30px;}
 
-.th-img{
-	height: 160px;
-	background-image: url(th.jpg);
-	background-size: cover;
-	padding-top: 5px;/*
-	background-position: center;*/
-}
-
-header{
-
-	background-image: url(th.jpg);
-	background-size: cover;
-height: 160px;
-padding-top: 5px;}/*
-	margin-left: 40px;*/
-	/*
-	background-color: transparent;
-	background-repeat: no-repeat;
-    cursor:pointer;
-    overflow: hidden;
-    outline:none;
-    */
-.boy {
-	color: black;
-	padding-left: 50px;
-	text-align: center;
-}
-.button {
-	height: 40px;
-	width: 140px;
-	opacity: 0.6;
-	margin: 0px;
-	color: black;
-	text-align: center;
-}
-.b {
-	opacity: 1;
-	color: blue;
-	background-color: white;
-	text-align: center;
+.button
+{margin: 40px;
+font-size:25px;
+text-emphasis: center;
+align-self: hover;
 }
 
-#h2{
-	text-align: center;
-	padding: 20px;
-	color: white;
+.box 
+{ background-image: url(maxre.jpg);
+        width: 820px;
+        height: 359px;
+        float: left;
+        margin-left: 5px;
+
+ }
+.about
+ {background-image: url(nature.jpg);
+text-align: center;
+width: 1330px;
+height: 390px;
+font-size: 30px;;
+margin-top: 10px;
+float: right;
 }
 
-.box{
-	width: 250px;
-	height: 500px;
-	background: #649405;
-	float: left;
-	margin-right: 20px;
+
+.edu
+ {background-color:skyblue;
+text-align:center ;
+width: 700px;
+height: 300px;
+float: left;
+margin-right: 10px;
+font-size: 20px;
 }
 
-#ul{
-	margin: 20px;	
+.experience
+{background-color: skyblue;
+width: 600px;;
+text-align: center;
+height: 300px;
+float: left;
 }
 
-/* 
-Margin: empty space around my element
-Border: border/stroke around the element
-Padding: empty space with background around my element
-*/
-
-.img1{
-	width: 180px;
-	height: 110px;
-	margin: 35px 35px 10px;
-	border: 2px solid black;
+.bar
+{background-color: rgb(235, 135, 135);
+margin-top: 10px ;
+width: 1350px;
+height: 180px;
+float: left;
+text-align:center;
+font-size: 30px;}
+.bar{
+display: inline;
 }
 
-.img2{
-	width: 180px;
-	height: 110px;
-	margin: 10px 35px;
-	border: 2px solid black;
-}
-.img3{width: 180px;
-	height: 110px;
-	margin: 10px 35px;
-	border: 2px solid black;
+.recent 
+{background-color: rgb(235, 135, 135);
+        margin-top: 10px ;
+        width: 1350px;
+        height: 180px;
+        float: left;
+        text-align:center;
+        font-size: 30px;}
 
+.t
+{background-image: url(nature.jpg);
+text-align: end;
+ width: 300px;
+ height: 180px;
+ font-size: 50px;
+ float: left;
+ margin: 10px;
 }
-.txt{
-	margin-left: 20px;
+.r
+{background-image: url(nature.jpg);
+text-align: end;
+ width: 300px;
+ height: 180px;
+ font-size: 50px;
+ float: left;
+ margin: 10px;
 }
-
-/*Pseudo classes for anchor tag */
-a:link{
-	font-size: 15px;
+.e
+{background-image: url(nature.jpg);
+        text-align: end;
+         width: 300px;
+         height: 180px;
+         font-size: 50px;
+         float: left;
+margin: 7px;
 }
-
-a:visited{
-	color: brown;
-}
-
-a:hover{
-	font-size: 25px;
-}
-
-a:focus{
-	background: yellow;
-}
-
-a:active{
-	color: green;
-	font-weight: 900;
-}
+.s
+{background-image: url(nature.jpg);
+        text-align: end;
+         width: 300px;
+         height: 180px;
+         font-size: 50px;
+         float: left;
+margin: 10px;}
